WorkflowRunnerWithRaire choosing first item from list of workflows.